--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "node server.js",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
@@ -30,6 +31,8 @@
     "vite": "^6.0.1"
   },
   "dependencies": {
+    "express": "^4.21.2",
+    "pug": "^3.0.3",
     "sass": "^1.83.0"
   }
 }
