--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "express": "^4.21.2",
+    "node-fetch": "^3.3.2",
     "pug": "^3.0.3",
     "sass": "^1.83.0"
   }
